--- a/css/responsive.scss
+++ b/css/responsive.scss
@@ -73,4 +73,7 @@
       margin-left: 0rem;
     }
   }
+  .box-col-2 {
+    margin-bottom: 1.8rem;
+  }
 }
